--- a/Device_Emulator/Debug/makefile
+++ b/Device_Emulator/Debug/makefile
@@ -1,5 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
+# Toolchain: GNU Tools for STM32 (9-2020-q2-update)
 ################################################################################
 
 -include ../makefile.init
@@ -36,6 +37,12 @@ endif
 
 -include ../makefile.defs
 
+OPTIONAL_TOOL_DEPS := \
+$(wildcard ../makefile.defs) \
+$(wildcard ../makefile.init) \
+$(wildcard ../makefile.targets) \
+
+
 BUILD_ARTIFACT_NAME := emulator_controller
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX := 
@@ -62,22 +69,22 @@ all: main-build
 main-build: emulator_controller.elf secondary-outputs
 
 # Tool invocations
-emulator_controller.elf: $(OBJS) $(USER_OBJS) C:\Users\decre\Documents\GitHub\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld
-	arm-none-eabi-gcc -o "emulator_controller.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\decre\Documents\GitHub\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="emulator_controller.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+emulator_controller.elf: $(OBJS) $(USER_OBJS) D:\Users\Utilisateur\Documents\OneDrive\ -\ Haute\ Ecole\ Louvain\ en\ Hainaut\HELHa\tempon\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "emulator_controller.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Users\Utilisateur\Documents\OneDrive - Haute Ecole Louvain en Hainaut\HELHa\tempon\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="emulator_controller.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES)
+default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-emulator_controller.list: $(EXECUTABLES)
+emulator_controller.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "emulator_controller.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-emulator_controller.bin: $(EXECUTABLES)
+emulator_controller.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "emulator_controller.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
