--- a/Device_Emulator/Debug/makefile
+++ b/Device_Emulator/Debug/makefile
@@ -69,8 +69,8 @@ all: main-build
 main-build: emulator_controller.elf secondary-outputs
 
 # Tool invocations
-emulator_controller.elf: $(OBJS) $(USER_OBJS) D:\Users\Utilisateur\Documents\OneDrive\ -\ Haute\ Ecole\ Louvain\ en\ Hainaut\HELHa\tempon\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "emulator_controller.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Users\Utilisateur\Documents\OneDrive - Haute Ecole Louvain en Hainaut\HELHa\tempon\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="emulator_controller.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+emulator_controller.elf: $(OBJS) $(USER_OBJS) C:\Users\decre\Desktop\Second\ Quad\ MA1\GITLAB\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "emulator_controller.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\decre\Desktop\Second Quad MA1\GITLAB\Universal-HID-Translator\Device_Emulator\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="emulator_controller.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
